# Pulse

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  app.py  evaluate_emails.py  pyproject.toml  start_server.py
.cursor/rules/: rules.md
Model Finetuning/data_creation/: batch_requests_modern.jsonl  data_creation.md  email_recipes_1250.csv  llm_prompting.ipynb
Model Finetuning/data_creation/emails_data/: email_dataset_checkpoint_1049.csv  email_dataset_checkpoint_149.csv  email_dataset_checkpoint_199.csv  email_dataset_checkpoint_449.csv  email_dataset_checkpoint_499.csv  email_dataset_checkpoint_549.csv  email_dataset_checkpoint_599.csv  email_dataset_checkpoint_749.csv  (+3 more)
Model Finetuning/finetuning/: README.md  data_preprocessing.py  download_models.py  requirements.txt  sentiment_classifier.py  topic_classifier.py
ModelFinetuning/data_creation/: batch_requests.jsonl  creating_locally.ipynb  data_requirements.txt  recipes_creation.ipynb
backend/: requirements.txt  run_server.py
backend/app/: __init__.py  auth.py  config.py  dashboard.py  database.py  email_connector.py  llm_processor.py  main.py  nlp_processor.py  simple_storage.py
frontend/: index.html  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: main.ts  style.css  types.ts
synthetic_data_creation/data_creation/: creating_locally.ipynb
synthetic_data_creation/evaluation/: evaluation.ipynb
synthetic_data_creation/finetuning/: README.md  data_preprocessing.py  evaluation.py  topic_classifier.py
test-ui/: README.md  index.html  inference_server.py
(+14 files in other folders)
