[project]
name = "parliament-pulse"
version = "0.1.0"
description = "Parliament Pulse - Local email analysis for parliamentarians"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "streamlit-card>=1.0.2",
]

[tool.uv]
dev-dependencies = []

# Remove build-system since we're not building a package
